--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "tapp-web_client",
+  "name": "portfolio-web_client",
   "version": "0.0.1",
-  "description": "beers",
-  "main": "app/main.jsx",
+  "description": "portfolio",
+  "main": "app/index.js",
   "scripts": {
     "build": "webpack -d",
     "start": "webpack-dev-server --port 8081 -d",
@@ -20,40 +20,31 @@
   "homepage": "https://github.com/smashingboxes/tapp-web_client/wiki",
   "dependencies": {
     "axios": "~0.5.4",
-    "base-64": "^0.1.0",
-    "flux": "~2.1.1",
-    "history": "~1.17.0",
     "immutable": "~3.7.5",
-    "keymirror": "~0.1.1",
-    "metrics-graphics": "^2.8.0",
-    "moment": "^2.11.2",
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
+    "react-redux": "^4.4.1",
     "react-router": "~1.0.0-rc3",
-    "underscore": "^1.8.3",
-    "url": "~0.11.0"
+    "redux": "^3.3.1",
+    "underscore": "^1.8.3"
   },
   "devDependencies": {
-    "autoprefixer": "^6.1.0",
-    "babel-core": "^5.8.22",
+    "autoprefixer": "6.3.3",
     "babel-eslint": "^4.1.1",
-    "babel-loader": "^5.3.2",
+    "babel-loader": "^6.2.1",
+    "babel-register": "^6.7.2",
     "chai": "^3.2.0",
     "chai-immutable": "^1.3.0",
-    "css-loader": "^0.21.0",
+    "css-loader": "^0.23.1",
     "eslint": "^1.3.1",
     "eslint-plugin-react": "^3.3.0",
     "extract-text-webpack-plugin": "^0.9.1",
     "faker": "^3.0.1",
-    "file-loader": "^0.8.4",
-    "jsdom": "^6.5.1",
     "lost": "~6.6.2",
     "mocha": "^2.3.2",
-    "node-sass": "^3.4.1",
-    "postcss-loader": "^0.7.0",
-    "sass-loader": "^3.1.1",
+    "postcss-loader": "^0.8.0",
+    "react-dom": "~0.14.7",
     "sinon": "^1.16.1",
-    "style-loader": "^0.13.0",
     "webpack": "^1.12.6",
     "webpack-dev-server": "^1.12.1"
   }
