--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app/index.js",
   "scripts": {
     "build": "webpack -d",
-    "start": "webpack-dev-server --port 8081 -d",
+    "start": "webpack-dev-server --port 8081 --hot -d --progress --colors",
     "test": "eslint ./app && mocha --opts mocha.opts 'app/**/*-test.js'"
   },
   "repository": {
@@ -30,22 +30,40 @@
   },
   "devDependencies": {
     "autoprefixer": "6.3.3",
+    "babel-core": "^6.7.6",
     "babel-eslint": "^4.1.1",
     "babel-loader": "^6.2.1",
+    "babel-preset-es2015": "^6.6.0",
+    "babel-preset-react": "^6.5.0",
+    "babel-preset-stage-0": "^6.5.0",
     "babel-register": "^6.7.2",
+    "browser-sync": "^2.11.2",
+    "browser-sync-webpack-plugin": "^1.0.1",
     "chai": "^3.2.0",
     "chai-immutable": "^1.3.0",
+    "clean-webpack-plugin": "^0.1.8",
     "css-loader": "^0.23.1",
     "eslint": "^1.3.1",
     "eslint-plugin-react": "^3.3.0",
     "extract-text-webpack-plugin": "^0.9.1",
     "faker": "^3.0.1",
+    "html-webpack-plugin": "^2.15.0",
     "lost": "~6.6.2",
     "mocha": "^2.3.2",
+    "node-sass": "^3.4.2",
     "postcss-loader": "^0.8.0",
-    "react-dom": "~0.14.7",
+    "react-hot-loader": "^1.3.0",
+    "resolve-url": "^0.2.1",
+    "sass-loader": "^3.2.0",
     "sinon": "^1.16.1",
-    "webpack": "^1.12.6",
-    "webpack-dev-server": "^1.12.1"
+    "style-loader": "^0.13.1",
+    "webpack": "^1.12.14",
+    "webpack-dev-server": "1.14.1"
+  },
+  "babel": {
+    "presets": [
+      "es2015",
+      "react"
+    ]
   }
 }
