--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "webpack -d",
     "start": "webpack-dev-server --port 8081 --hot -d --progress --colors",
-    "test": "eslint ./app && mocha --opts mocha.opts 'app/**/*-test.js'"
+    "test": "eslint ./src && mocha --opts mocha.opts 'src/**/*-test.js'"
   },
   "repository": {
     "type": "git",
@@ -21,11 +21,13 @@
   "dependencies": {
     "axios": "~0.5.4",
     "immutable": "~3.7.5",
-    "react": "^0.14.7",
-    "react-dom": "^0.14.7",
+    "keymirror": "^0.1.1",
+    "react": "^15.0.1",
+    "react-dom": "^15.0.1",
     "react-redux": "^4.4.1",
-    "react-router": "~1.0.0-rc3",
+    "react-router": "^1.0.3",
     "redux": "^3.3.1",
+    "redux-thunk": "^2.0.1",
     "underscore": "^1.8.3"
   },
   "devDependencies": {
@@ -48,10 +50,12 @@
     "extract-text-webpack-plugin": "^0.9.1",
     "faker": "^3.0.1",
     "html-webpack-plugin": "^2.15.0",
+    "jsdom": "^8.3.1",
     "lost": "~6.6.2",
     "mocha": "^2.3.2",
     "node-sass": "^3.4.2",
     "postcss-loader": "^0.8.0",
+    "react-addons-test-utils": "^15.0.1",
     "react-hot-loader": "^1.3.0",
     "resolve-url": "^0.2.1",
     "sass-loader": "^3.2.0",
