--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "axios": "~0.5.4",
     "immutable": "~3.7.5",
     "keymirror": "^0.1.1",
+    "normalize.css": "^4.1.1",
     "react": "^15.0.1",
     "react-dom": "^15.0.1",
     "react-redux": "^4.4.1",
