--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "immutable": "~3.7.5",
     "keymirror": "^0.1.1",
     "normalize.css": "^4.1.1",
+    "path": "^0.12.7",
     "react": "^15.0.1",
     "react-dom": "^15.0.1",
     "react-redux": "^4.4.1",
@@ -50,6 +51,7 @@
     "eslint-plugin-react": "^3.3.0",
     "extract-text-webpack-plugin": "^0.9.1",
     "faker": "^3.0.1",
+    "file-loader": "^0.8.5",
     "html-webpack-plugin": "^2.15.0",
     "jsdom": "^8.3.1",
     "lost": "~6.6.2",
@@ -59,9 +61,11 @@
     "react-addons-test-utils": "^15.0.1",
     "react-hot-loader": "^1.3.0",
     "resolve-url": "^0.2.1",
+    "resolve-url-loader": "^1.4.3",
     "sass-loader": "^3.2.0",
     "sinon": "^1.16.1",
     "style-loader": "^0.13.1",
+    "url-loader": "^0.5.7",
     "webpack": "^1.12.14",
     "webpack-dev-server": "1.14.1",
     "whatwg-fetch": "^1.0.0"
