--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "portfolio",
   "main": "app/index.js",
   "scripts": {
-    "build": "webpack -d",
+    "build-dev": "NODE_ENV=development webpack -d",
+    "build-prod": "NODE_ENV=production webpack -d",
     "start": "webpack-dev-server --port 8081 --hot -d --progress --colors",
     "test": "eslint ./src && mocha --opts mocha.opts 'src/**/*-test.js'"
   },
