--- a/package.json
+++ b/package.json
@@ -24,12 +24,14 @@
     "history": "^1.17.0",
     "immutable": "~3.7.5",
     "keymirror": "^0.1.1",
+    "moment": "^2.13.0",
     "normalize.css": "^4.1.1",
     "path": "^0.12.7",
     "react": "^15.0.1",
     "react-dom": "^15.0.1",
     "react-redux": "^4.4.1",
     "react-router": "^1.0.3",
+    "react-slick": "^0.12.2",
     "redux": "^3.3.1",
     "redux-thunk": "^2.0.1",
     "underscore": "^1.8.3"
