added active admin

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "homepage": "https://github.com/smashingboxes/tapp-web_client/wiki",
   "dependencies": {
     "axios": "~0.5.4",
+    "bourbon": "^4.2.7",
     "history": "^1.17.0",
     "immutable": "~3.7.5",
     "keymirror": "^0.1.1",
