--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-router": "^1.0.3",
     "react-slick": "^0.12.2",
     "redux": "^3.3.1",
+    "redux-form": "^5.3.1",
     "redux-thunk": "^2.0.1",
     "underscore": "^1.8.3"
   },
