--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "redux": "^3.3.1",
     "redux-form": "^5.3.1",
     "redux-thunk": "^2.0.1",
-    "underscore": "^1.8.3"
+    "underscore": "^1.8.3",
+    "webpack-dotenv-plugin": "^1.3.2"
   },
   "devDependencies": {
     "autoprefixer": "6.3.3",
