--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-redux": "^4.4.1",
     "react-router": "^1.0.3",
     "react-slick": "^0.12.2",
+    "react-swipeable": "^3.6.0",
     "redux": "^3.3.1",
     "redux-form": "^5.3.1",
     "redux-thunk": "^2.0.1",
