--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,14 @@
 {
-  "presets" : ["es2015", "react"]
+  "presets": [
+    "@babel/preset-env",
+    "@babel/preset-react",
+  ],
+  "env": {
+    "test": {
+      "plugins": [
+        "transform-es2015-modules-commonjs"
+      ]
+    }
+  }
 }
+
