--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
   "scripts": {
     "build-dev": "NODE_ENV=development webpack -d",
     "build-prod": "NODE_ENV=production webpack -d",
-    "start": "webpack-dev-server --port 8081 --hot -d --progress --colors",
-    "test": "eslint ./src && mocha --opts mocha.opts 'src/**/*-test.js'"
+    "lint": "eslint ./src",
+    "start": "webpack-dev-server --port 8080 --hot -d --progress --colors",
+    "test": "NODE_ENV='test' mocha --require ignore-styles --require @babel/register --opts 'support/mocha.opts' 'src/**/*-test.js'"
   },
   "repository": {
     "type": "git",
@@ -20,68 +21,69 @@
   },
   "homepage": "https://github.com/smashingboxes/tapp-web_client/wiki",
   "dependencies": {
-    "axios": "~0.5.4",
-    "bourbon": "^4.2.7",
-    "history": "^1.17.0",
-    "immutable": "~3.7.5",
+    "axios": "~0.18.0",
+    "bourbon": "^5.1.0",
+    "history": "^4.7.2",
+    "immutable": "~4.0.0-rc.12",
     "keymirror": "^0.1.1",
     "moment": "^2.13.0",
-    "normalize.css": "^4.1.1",
+    "normalize.css": "^8.0.1",
     "path": "^0.12.7",
-    "react": "^15.0.1",
-    "react-dom": "^15.0.1",
-    "react-redux": "^4.4.1",
-    "react-router": "^1.0.3",
-    "react-slick": "^0.12.2",
-    "react-swipeable": "^3.6.0",
-    "redux": "^3.3.1",
-    "redux-form": "^5.3.1",
+    "prop-types": "^15.6.2",
+    "react": "^16.6.3",
+    "react-dom": "^16.6.3",
+    "react-redux": "^6.0.0",
+    "react-router": "^4.3.1",
+    "react-slick": "^0.23.2",
+    "react-swipeable": "^4.3.0",
+    "redux": "^4.0.1",
+    "redux-form": "^8.0.1",
     "redux-thunk": "^2.0.1",
     "underscore": "^1.8.3",
-    "webpack-dotenv-plugin": "^1.3.2"
+    "webpack-dotenv-plugin": "^2.1.0"
   },
   "devDependencies": {
-    "autoprefixer": "6.3.3",
-    "babel-core": "^6.7.6",
-    "babel-eslint": "^4.1.1",
-    "babel-loader": "^6.2.1",
-    "babel-preset-es2015": "^6.6.0",
-    "babel-preset-react": "^6.5.0",
-    "babel-preset-stage-0": "^6.5.0",
-    "babel-register": "^6.7.2",
+    "@babel/cli": "^7.2.3",
+    "@babel/core": "^7.2.0",
+    "@babel/preset-env": "^7.2.3",
+    "@babel/preset-react": "^7.0.0",
+    "@babel/preset-stage-2": "^7.0.0",
+    "@babel/register": "^7.0.0",
+    "autoprefixer": "9.4.2",
+    "babel-eslint": "^10.0.1",
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2",
     "browser-sync": "^2.11.2",
-    "browser-sync-webpack-plugin": "^1.0.1",
-    "chai": "^3.2.0",
+    "browser-sync-webpack-plugin": "^2.2.2",
+    "chai": "^4.2.0",
+    "chai-as-promised": "^7.1.1",
     "chai-immutable": "^1.3.0",
-    "clean-webpack-plugin": "^0.1.8",
-    "css-loader": "^0.23.1",
-    "eslint": "^1.3.1",
-    "eslint-plugin-react": "^3.3.0",
-    "extract-text-webpack-plugin": "^0.9.1",
-    "faker": "^3.0.1",
-    "file-loader": "^0.8.5",
-    "html-webpack-plugin": "^2.15.0",
-    "jsdom": "^8.3.1",
-    "lost": "~6.6.2",
-    "mocha": "^2.3.2",
-    "node-sass": "^3.4.2",
-    "postcss-loader": "^0.8.0",
+    "clean-webpack-plugin": "^1.0.0",
+    "css-loader": "^2.0.0",
+    "enzyme": "^3.8.0",
+    "enzyme-adapter-react-16": "^1.7.1",
+    "eslint": "^5.10.0",
+    "eslint-plugin-react": "^7.11.1",
+    "extract-text-webpack-plugin": "^3.0.2",
+    "faker": "^4.1.0",
+    "file-loader": "^2.0.0",
+    "html-webpack-plugin": "^3.2.0",
+    "ignore-styles": "^5.0.1",
+    "jsdom": "^13.0.0",
+    "lost": "~8.3.0",
+    "mocha": "^5.2.0",
+    "node-sass": "^4.11.0",
+    "postcss-loader": "^3.0.0",
     "react-addons-test-utils": "^15.0.1",
-    "react-hot-loader": "^1.3.0",
+    "react-hot-loader": "^4.3.12",
     "resolve-url": "^0.2.1",
-    "resolve-url-loader": "^1.4.3",
-    "sass-loader": "^3.2.0",
-    "sinon": "^1.16.1",
-    "style-loader": "^0.13.1",
-    "url-loader": "^0.5.7",
-    "webpack": "^1.12.14",
-    "webpack-dev-server": "1.14.1",
-    "whatwg-fetch": "^1.0.0"
-  },
-  "babel": {
-    "presets": [
-      "es2015",
-      "react"
-    ]
+    "resolve-url-loader": "^3.0.0",
+    "sass-loader": "^7.1.0",
+    "sinon": "^7.2.0",
+    "source-map": "^0.7.3",
+    "style-loader": "^0.23.1",
+    "url-loader": "^1.1.2",
+    "webpack": "^4.27.1",
+    "webpack-dev-server": "^3.1.14",
+    "whatwg-fetch": "^3.0.0"
   }
 }
