--- a/package.json
+++ b/package.json
@@ -22,10 +22,8 @@
   "homepage": "https://github.com/smashingboxes/tapp-web_client/wiki",
   "dependencies": {
     "axios": "^0.18.0",
-    "bourbon": "^5.1.0",
     "history": "^3.3.0",
     "immutable": "~4.0.0-rc.12",
-    "keymirror": "^0.1.1",
     "moment": "^2.13.0",
     "normalize.css": "^8.0.1",
     "path": "^0.12.7",
@@ -37,10 +35,7 @@
     "react-slick": "^0.23.2",
     "react-swipeable": "^4.3.0",
     "redux": "^4.0.1",
-    "redux-form": "^8.0.1",
-    "redux-thunk": "^2.0.1",
-    "underscore": "^1.8.3",
-    "webpack-dotenv-plugin": "^2.1.0"
+    "redux-thunk": "^2.0.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.2.3",
@@ -53,11 +48,8 @@
     "babel-eslint": "^10.0.1",
     "babel-loader": "^8.0.5",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2",
-    "browser-sync": "^2.11.2",
-    "browser-sync-webpack-plugin": "^2.2.2",
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
-    "clean-webpack-plugin": "^1.0.0",
     "css-loader": "^2.0.0",
     "enzyme": "^3.8.0",
     "enzyme-adapter-react-16": "^1.7.1",
@@ -65,7 +57,7 @@
     "eslint-plugin-react": "^7.11.1",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "faker": "^4.1.0",
-    "file-loader": "^2.0.0",
+    "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
     "ignore-styles": "^5.0.1",
     "jsdom": "^13.0.0",
@@ -74,10 +66,7 @@
     "node-sass": "^4.11.0",
     "postcss-import": "^12.0.1",
     "postcss-loader": "^3.0.0",
-    "react-hot-loader": "^4.3.12",
     "redux-devtools-extension": "^2.13.7",
-    "resolve-url": "^0.2.1",
-    "resolve-url-loader": "^3.0.0",
     "sass-loader": "^7.1.0",
     "sinon": "^7.2.0",
     "source-map": "^0.7.3",
@@ -86,6 +75,7 @@
     "webpack": "^4.27.1",
     "webpack-cli": "^3.2.0",
     "webpack-dev-server": "^3.0.0-beta.1",
+    "webpack-dotenv-plugin": "^2.1.0",
     "whatwg-fetch": "^3.0.0"
   }
 }
